matched to feeta, critical path

--- a/api.yaml
+++ b/api.yaml
@@ -893,3 +893,41 @@ paths:
                 type: integer
               message:
                 type: string
+  
+  /criticalPath:
+    get:
+      summary: critical path test
+      description: critical path test
+      parameters:
+        - in: query
+          name: project_id
+          type: string
+          description: project id of the
+        - in: query
+          name: snapshot_date
+          type: string
+          description: snapshot date of project
+      responses:
+        200: 
+          description: successfull response
+          schema: 
+            type: string
+    post:
+      summary: update critical paths of a project
+      description: update critical path of a project , change the critical path field in the database.
+      tags:
+        - test
+      parameters:
+        - in: query
+          name: project_id
+          type: string
+          description: project id of the
+        - in: query
+          name: snapshot_date
+          type: string
+          description: snapshot date of project
+      responses:
+        200: 
+          description: successfull response
+          schema: 
+            type: string
